--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cassandra-dpkgversiontype (1.2.5~daisy-pluckers1) precise; urgency=low
+
+  * Build for Cassandra 1.2
+
+ -- Evan Dandrea <ev@ubuntu.com>  Tue, 18 Jun 2013 09:59:28 +0100
+
 cassandra-dpkgversiontype (1.0.7~daisy-pluckers4) precise; urgency=low
 
   * Handle both sides of verrevcmp being null.
